# quackie

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md  build_deb.sh
src/: arguments.rs  duck.json  duck.rs  duckfile.rs  geometry.rs  graphics.rs  lib.rs  main.c  main.rs
src/geometry/: matrix.rs  mod.rs  point.rs  test.rs  triangle.rs  vector.rs
src/graphics/: geometry_buffer.rs  image_buffer.rs  pixel_data.rs  postprocess.rs  textured_triangle.rs  window_buffer.rs
src/graphics/postprocess/: antialias.rs  outline.rs
