[package]
name = "quackie"
version = "0.1.0"
edition = "2021"
description = "A duck for your terminal! 🦆"
readme = "README.md"
authors = ["Lech Mazur"]
license = "GPL-2.0"
repository = "https://github.com/lechos22/quackie"
keywords = ["ascii-art"]
categories = ["command-line-utilities"]

[dependencies]
pancurses = "0.17.0"
