[package]
name = "quackie"
version = "0.2.1"
edition = "2021"
description = "A duck for your terminal! 🦆"
readme = "README.md"
authors = ["Lech Mazur"]
license = "GPL-2.0"
repository = "https://github.com/lechos22/quackie"
keywords = ["ascii-art"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
pancurses = "0.17.0"
